[package]
name = "assembler"
version = "1.0.0"
edition = "2021"
description = "Assembler for the virtual machine"

[dependencies]
assert_exists = "0.1.0"
clap = { version = "3.2.20", features = ["derive"] }
indoc = "2.0.3"
lazy_static = "1.4.0"
num = "0.4.1"

[dependencies.rust_vm_lib]
path = "../rust_vm_lib"
