[package]
name = "assembler"
version = "1.0.0"
edition = "2021"
description = "Assembler for the virtual machine"

[dependencies]
clap = { version = "4.4.4", features = ["derive"] }
colored = "2.0.4"
indoc = "2.0.3"
lazy_static = "1.4.0"
num = "0.4.1"
regex = "1.10.5"

[dependencies.rusty_vm_lib]
path = "../rusty_vm_lib"
