[package]
name = "irc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.4", features = ["derive"] }
colored = "2.0.4"
indoc = "2.0.4"
lazy_static = "1.4.0"
regex = "1.9.5"

[dependencies.rust_vm_lib]
path = "../rust_vm_lib"
