[package]
name = "oxide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casey = "0.4.0"
clap = { version = "4.5.1", features = ["derive"] }
colored = "2.0.4"
indoc = "2.0.4"
lazy_static = "1.5.0"
regex = "1.11.1"
static_assertions = "1.1.0"

[dependencies.rusty_vm_lib]
path = "../rusty_vm_lib"
