[package]
name = "vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_exists = "0.1.0"
clap = { version = "4.3", features = ["derive"] }
rand = "0.8.5"
rust_vm_lib = { path = "../rust_vm_lib" }
